# vedke-2

./: .gitignore  README.md  Sarvam.ipynb  agent.md  check_extraction.json  logic.md  pyproject.toml  repo_map.md
.ipynb_checkpoints/: Sarvam-checkpoint.ipynb
data/: audio.whisper_verbose.json  audio.whisper_words.json  extract_config.example.json
docs/: segmenter_tuning.md
frontend/: index.html  package-lock.json  package.json  server.mjs  tsconfig.json
frontend/src/: App.tsx  styles.css
scripts/: __init__.py  agent4_pdf_truth.py  build_highlights_json.py  build_ocr_check_extraction.py  build_sentence_inputs.py  build_sentences.py  clean_highlights_json.py  extract_highlight_features.py  pdf_pages_to_svg.py  prepare_asr_audio.py  run_alignment_llm.py  run_sarvam_stt.py  sentence_segmenter.py  stage_orchestrator.py  tune_segmenter.py  validate_alignment_manual.py
scripts/lib/: __init__.py  text_filters.py
src/vedke2/: __init__.py  pdf_pages_to_svg.py
tests/: test_agent4_pdf_truth.py  test_build_sentence_inputs.py  test_build_sentences.py  test_run_sarvam_stt.py  test_stage_orchestrator.py
