[project]
name = "vedke2"
version = "0.1.0"
description = "PDF page extraction pipeline for SVG generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "numpy>=2.4.2",
    "openai>=2.24.0",
    "scipy>=1.17.1",
]

[project.scripts]
pdf-pages-to-svg = "scripts.pdf_pages_to_svg:main"
build-highlights-json = "scripts.build_highlights_json:main"
clean-highlights-json = "scripts.clean_highlights_json:main"
extract-highlight-features = "scripts.extract_highlight_features:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
